@@ -1,6 +1,7 @@
 Changes with version
 
- *) More python3 fixes: Fixed one itervalues() leftover
+ *) More python3 fixes: Fixed one itervalues() leftover, use
+    inspect.signature() if available, instead of .getargspec().
 
 
 Changes with version 0.5.3
